# Model-Pulse

./: .gitignore  README.md  TEST_WORKFLOW.md  notes.txt  pyproject.toml
Model_Pulse/: main.py
Model_Pulse/device_a/: server.py
Model_Pulse/device_b/: bridge.py  cli.py  shard_client.py
Model_Pulse/shared/: models.py
modelpulse/: main.py
modelpulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
modelpulse/client/: benchmarks.py  bridge.py  cli.py  shard_client.py
modelpulse/device_a/: server.py
modelpulse/device_b/: bridge.py  cli.py
modelpulse/server/: server.py
modelpulse/server/sharder/: converter.py  parser.py
modelpulse/shared/: models.py  ws_protocol.py
tools/: gguf_parser.py  gguf_to_shards.py
