[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelpulse"
version = "0.1.0"
description = "End-to-end partial-weight transfer pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Mohammad Sufiyan", email = "moahmmadsufiyan152@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "rich>=13.7",
]
client = [
  "llama-cpp-python>=0.2.90",
  "psutil>=5.9",
  "rich>=13.7",
  "typer>=0.12",
]
all = [
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "typer>=0.12",
  "rich>=13.7",
  "llama-cpp-python>=0.2.90",
  "psutil>=5.9",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
modelpulse = "shard_inference.main:main"
shard-server = "shard_inference.device_a.server:main"
shard-bridge = "shard_inference.device_b.cli:main"

[project.urls]
Homepage = "https://github.com/MdSufiyan005/ModelPulse"
Source = "https://github.com/MdSufiyan005/ModelPulse"

[tool.setuptools.packages.find]
where = ["."]
include = ["shard_inference*"]